--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,77 @@
-body{
-    background: red;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+h1 {
+  margin: 0;
+  font-family: 'Inter Tight', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 150px;
+  letter-spacing: 10px;
+  line-height: 150px;
+  text-align: center;
+}
+
+.heading-one,
+.heading-two,
+.heading-three {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.title {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+}
+
+.heading {
+  grid-row: 1/2;
+  grid-column: 1/3;
+}
+
+.current {
+  text-align: center;
+  font-family: 'Inter Tight', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+}
+
+.years {
+  text-align: center;
+  font-family: 'Inter Tight', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+}
+
+.hero {
+  border: 1px solid black;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  align-items: center;
+  justify-items: center;
+  > * {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+}
+
+img {
+  border-radius: 50px;
+  width: 700px;
 }
