--- a/src/styles.css
+++ b/src/styles.css
@@ -8,22 +8,47 @@ body {
   background: rgb(26, 26, 26);
 }
 
-.header {
-  padding: 0 80px 0 80px;
-  color: white;
+.wrapper {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+p {
   font-family: 'Inter Tight', sans-serif;
   font-optical-sizing: auto;
   font-weight: 800;
   font-size: 18px;
+  color: white;
+}
+
+h1 {
+  margin: 0;
+  color: white;
+  font-family: 'Inter Tight', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 150px;
+  line-height: 150px;
+  text-align: center;
+}
+
+.row {
+  max-width: 1440px;
+  width: 100%;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
 }
 
 .header .name {
   display: flex;
   align-items: center;
   gap: 70px;
-  border: 1px solid white;
   padding: 20px 50px 20px 50px;
 }
 
@@ -31,7 +56,6 @@ body {
   display: flex;
   align-items: center;
   gap: 20px;
-  border: 1px solid white;
   padding: 20px 50px 20px 50px;
 }
 
@@ -44,18 +68,6 @@ body {
   font-optical-sizing: auto;
   font-weight: 600;
   font-size: 15px;
-}
-
-h1 {
-  margin: 0;
-  font-family: 'Inter Tight', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 800;
-  font-style: normal;
-  font-size: 150px;
-  letter-spacing: 10px;
-  line-height: 150px;
-  text-align: center;
 }
 
 .heading-one,
@@ -94,9 +106,9 @@ h1 {
 }
 
 .hero {
+  padding-top: 120px;
   border: 1px solid white;
   color: white;
-  padding-top: 50px;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
@@ -109,7 +121,14 @@ h1 {
   }
 }
 
-img {
+.hero .years,
+.hero .current,
+.hero .title {
+  height: 600px;
+}
+
+.hero .picture {
   border-radius: 50px;
-  width: 700px;
+  /* width: 700px; */
+  height: 500px;
 }
