--- a/src/styles.css
+++ b/src/styles.css
@@ -185,6 +185,7 @@ h4 {
   display: grid;
   justify-items: left;
   align-items: center;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 
 .experience .proj-heading h1 {
@@ -193,7 +194,8 @@ h4 {
 
 .experience .projects {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 1fr;
+  gap: 30px;
 }
 
 .proj-preview {
@@ -204,50 +206,51 @@ h4 {
   align-items: center;
 }
 
+.proj-preview .preview-img {
+  width: 100%;
+  height: 500px;
+  > * {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+  }
+}
+
 .proj-deets {
   grid-column: 2/3;
   grid-row: 1/2;
   display: grid;
+  gap: 10px;
 }
 
 .proj-deets .project {
-  display: grid;
+  display: flex;
   align-items: center;
-  gap: 20px;
-  grid-template-rows: 1fr 1fr 50px;
-  padding: 20px 0 20px 0;
   border-bottom: 1px solid #4f4d57;
 }
 
-.proj-deets .project p {
-  color: #999999;
-  font-weight: 400;
-  line-height: 26px;
-  grid-row: 2/3;
-}
-
-.proj-deets .project .links {
-  grid-row: 3/4;
-}
-
-.proj-deets .project .links a {
-  text-align: center;
-  text-decoration: none;
-  background: white;
+.proj-deets .project button {
   cursor: pointer;
-  padding: 10px 20px 10px 20px;
+  width: 100%;
+  height: 100%;
+  background: none;
   border: none;
-  border-radius: 10px;
-  font-family: 'Inter Tight', sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-size: 15px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
 }
 
-.proj-deets .project .links a:hover {
-  background: #cccccc;
+.project button .proj-txt {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.proj-deets .project .links a:visited {
-  color: #000;
+.project button .arrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 0%;
+  transform: translateX(-20px);
 }
