--- a/src/styles.css
+++ b/src/styles.css
@@ -178,7 +178,6 @@ h4 {
   padding-top: 120px;
   display: grid;
   align-items: center;
-  gap: 120px;
 }
 
 .experience .proj-heading {
@@ -195,7 +194,8 @@ h4 {
 .experience .projects {
   display: grid;
   grid-template-columns: 50% 1fr;
-  gap: 30px;
+  gap: 20px;
+  padding: 100px 0 50px 0;
 }
 
 .proj-preview {
