--- a/src/styles.css
+++ b/src/styles.css
@@ -207,13 +207,10 @@ h4 {
 }
 
 .proj-preview .preview-img {
+  /* border: 1px solid white; */
   width: 100%;
   height: 500px;
-  > * {
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-  }
+  border-radius: 20px;
 }
 
 .proj-deets {
