Add text copy to clipboard functionality - for email btn in header and footer - change position of weather project

--- a/src/styles.css
+++ b/src/styles.css
@@ -82,7 +82,7 @@ h4 {
   gap: 5px;
 }
 
-.connect button:hover {
+.connect button:active {
   background: #cccccc;
 }
 
@@ -319,7 +319,7 @@ h4 {
   gap: 5px;
 }
 
-.footer .row .socials .email button:hover {
+.footer .row .socials .email button:active {
   background: #cccccc;
 }
 
