--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ p {
   font-family: 'Inter Tight', sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
-  font-size: 18px;
+  font-size: clamp(12px, 1vw, 21px);
   color: white;
 }
 
@@ -30,8 +30,8 @@ h1 {
   font-optical-sizing: auto;
   font-weight: 800;
   font-style: normal;
-  font-size: 150px;
-  line-height: 150px;
+  font-size: clamp(2rem, calc(8vw + 1rem), 10rem);
+  line-height: 100%;
   text-align: center;
 }
 
@@ -41,44 +41,56 @@ h4 {
   font-optical-sizing: auto;
   font-weight: 650;
   font-style: normal;
-  font-size: 40px;
+  font-size: clamp(1.3rem, 4vw, 40px);
 }
 
 .row {
   max-width: 1440px;
   width: 100%;
+  padding: 0 30px 30px 30px;
+  display: grid;
+  justify-items: center;
 }
 
 .header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
+  padding-bottom: 0;
+  padding-top: 18px;
 }
 
 .header .name {
   display: flex;
   align-items: center;
-  gap: 70px;
-  padding: 20px 50px 20px 50px;
+  width: 50%;
 }
 
 .header .connect {
+  width: 50%;
   display: flex;
   align-items: center;
-  gap: 20px;
-  padding: 20px 50px 20px 50px;
+  justify-content: flex-end;
+  gap: 10px;
+}
+
+.header .github {
+  display: none;
 }
 
 .connect button {
   cursor: pointer;
-  padding: 10px 20px 10px 20px;
+  padding: 10px;
+  width: 15rem;
   border: none;
   border-radius: 20px;
   font-family: 'Inter Tight', sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
-  font-size: 15px;
+  font-size: clamp(8px, 5vw, 15px);
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 5px;
 }
 
@@ -101,6 +113,12 @@ h4 {
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
+  justify-content: center;
+  row-gap: 10px;
+}
+
+.title p {
+  font-size: clamp(10px, 1vw, 21px);
 }
 
 .heading {
@@ -127,29 +145,25 @@ h4 {
 }
 
 .hero {
-  padding-top: 120px;
+  padding-top: 20vh;
   color: white;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  align-items: center;
   justify-items: center;
+  align-self: center;
   > * {
     grid-area: 1 / 1 / 2 / 2;
   }
 }
 
-.hero .years,
-.hero .current,
-.hero .title {
-  height: 500px;
-}
-
 .hero .picture {
   border-radius: 50px;
-  height: 600px;
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 
 .main {
@@ -164,7 +178,7 @@ h4 {
   display: grid;
   justify-items: center;
   align-items: center;
-  font-size: 80px;
+  font-size: clamp(20px, 2vw, 4rem);
   max-width: 750px;
   text-align: center;
 }
@@ -193,7 +207,7 @@ h4 {
 }
 
 .experience .proj-heading h1 {
-  line-height: 130px;
+  line-height: 100%;
 }
 
 .experience .projects {
@@ -276,13 +290,10 @@ h4 {
 }
 
 .footer .row .footer-title {
+  width: 80%;
   display: flex;
   flex-direction: column;
   gap: 20px;
-}
-
-.footer .row .footer-title {
-  width: 80%;
 }
 
 .footer h6 {
@@ -301,7 +312,13 @@ h4 {
 
 .footer .row .socials .email {
   display: grid;
-  grid-template-rows: 100px 40px;
+  grid-template-rows: min-content 40px;
+  gap: 30px;
+}
+
+.footer .row .socials .email .email-txt {
+  display: grid;
+  gap: 10px;
 }
 
 .footer .row .socials .email button {
@@ -337,14 +354,20 @@ h4 {
   font-size: 28px;
 }
 
-.footer .row .ft-img img {
-  width: 80%;
+.footer .row .ft-img {
+  width: 100%;
+  height: 100%;
+  background-image: url('../src/img/footer-profile.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .footer .row .socials .social-links {
   padding-top: 40px;
   display: grid;
   gap: 20px;
+  margin-bottom: 30px;
 }
 
 .footer .row .socials .social-links .social-heading {
@@ -411,4 +434,85 @@ h4 {
 
 .design-reference a:active {
   color: red;
+}
+
+@media only screen and (max-width: 1023px) {
+  .experience .projects {
+    gap: 0;
+  }
+  .projects .proj-preview {
+    display: none;
+  }
+  .projects .proj-deets {
+    grid-column: 1/3;
+  }
+  .footer .row {
+    padding: 80px 50px 0 50px;
+  }
+  .proj-deets .project a {
+    padding: 25px 0 25px 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .header .connect {
+    display: none;
+  }
+  .header a.github {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+  .footer .row {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 50px;
+  }
+
+  .footer .row .socials {
+    width: 100%;
+  }
+
+  .footer .row .footer-title {
+    width: 100%;
+    grid-row: 2/3;
+    flex-direction: row;
+  }
+
+  .footer .row .footer-title .txt p {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .footer .row .footer-title {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .footer .row .footer-title .ft-img {
+    background-size: cover;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .wrapper .row {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .hero .years,
+  .hero .current,
+  .hero .title {
+    height: 500px;
+  }
+}
+
+@media (max-width: 767px) and (min-height: 668px) {
+  .hero {
+    padding-top: 35vh;
+  }
 }
