--- a/src/styles.css
+++ b/src/styles.css
@@ -357,9 +357,13 @@ h4 {
 .footer .row .ft-img {
   width: 100%;
   height: 100%;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+}
+
+.footer .row .ft-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
 }
 
 .footer .row .socials .social-links {
